[package]
name = "raydium-amm-cpi-legacy"
version = "0.1.0"
edition = "2021"

[lib]
name = "amm"
path = "src/mod.rs"

[features]
default = ["cpi"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-gen = "0.3.1"
anchor-lang = "0.31.0"
solana-program = "2.0.25"
spl-token = { version = "5.0" }
spl-associated-token-account = { version = "4.0"}
