[package]
name = "raydium-amm-cpi-legacy"
version = "0.1.0"
edition = "2021"

[lib]
name = "amm"
path = "src/mod.rs"

[features]
default = ["cpi"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]

[dependencies]
solana-program = "2.3.0"
spl-token = "5.0" 
spl-associated-token-account = "4.0"
