[package]
name = "raydium-amm-cpi-legacy"
version = "0.1.0"
edition = "2021"

[lib]
name = "amm"
path = "src/mod.rs"

[features]
default = ["cpi"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]

[dependencies]
solana-program = "2.3.0"
spl-token = { version = "5.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "4.0", features = ["no-entrypoint"] }
